detect: Fix OSS device detection with long names

Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=89921